--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,58 +9,65 @@ body {
     background-color: #d9dcd6;
 }
 
-.header {
+p {
+    font-size: 16px;
+}
+
+    header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #2a607c;
     color: #ffffff;
 }
 
-h1 {
+    h1 {
     display: inline-block;
     font-size: 48px;
+    }
+/*Selector for coloring "SEO" from Horiseon*/
+    .seo {
+            color: #d9dcd6;
 }
 
-.seo {
-    color: #d9dcd6;
+
+
+        nav {
+            padding-top: 15px;
+            margin-right: 20px;
+            float: right;
+            font-family: 'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', sans-serif;
+            font-size: 20px;
 }
 
-.header div {
-    padding-top: 15px;
-    margin-right: 20px;
-    float: right;
-    font-family: 'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', sans-serif;
-    font-size: 20px;
+            ul {
+                list-style-type: none;
 }
 
-.header div ul {
-    list-style-type: none;
+                li {
+                    display: inline-block;
+                    margin-left: 25px;
+}
+                    a {
+                        color: #ffffff;
+                        text-decoration: none;
 }
 
-.header div ul li {
-    display: inline-block;
-    margin-left: 25px;
+    figure {
+            height: 800px;
+            width: 100%;
+            margin-bottom: 25px;
+            background-image: url("../images/digital-marketing-meeting.jpg");
+            background-size: cover;
+            background-position: center;
 }
 
-a {
-    color: #ffffff;
-    text-decoration: none;
+    main {
+        width: 75%;
+        display: inline-block;
+        margin-left: 20px;
 }
 
-p {
-    font-size: 16px;
-}
-
-.hero {
-    height: 800px;
-    width: 100%;
-    margin-bottom: 25px;
-    background-image: url("../images/digital-marketing-meeting.jpg");
-    background-size: cover;
-    background-position: center;
-}
-
-.float-left {
+        .float-left {
     float: left;
     margin-right: 25px;
 }
@@ -70,11 +77,7 @@ p {
     margin-left: 25px;
 }
 
-.content {
-    width: 75%;
-    display: inline-block;
-    margin-left: 20px;
-}
+
 
 .benefits {
     margin-right: 20px;
