--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,6 +5,7 @@
     margin: 0;
 }
 
+/*Glogal selectors*/
 body {
     background-color: #d9dcd6;
 }
@@ -13,17 +14,29 @@ p {
     font-size: 16px;
 }
 
-    header {
-    padding: 20px;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    background-color: #2a607c;
-    color: #ffffff;
+img {
+    max-height: 200px;
+}
+h2 {
+    margin-bottom: 20px;
+    font-size: 36px;
 }
 
-    h1 {
+h1 {
     display: inline-block;
     font-size: 48px;
-    }
+}
+
+/*End glogal selectors*/
+
+    header {
+            padding: 20px;
+            font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+            background-color: #2a607c;
+            color: #ffffff;
+}
+
+    
 /*Selector for coloring "SEO" from Horiseon*/
     .seo {
             color: #d9dcd6;
@@ -67,14 +80,23 @@ p {
         margin-left: 20px;
 }
 
-        .float-left {
-    float: left;
-    margin-right: 25px;
+        section {
+                margin-bottom: 20px;
+                padding: 50px;
+                height: 300px;
+                font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+                background-color: #0072bb;
+                color: #ffffff;
+}
+/*Main section images selectors*/
+                .float-left {
+                            float: left;
+                            margin-right: 25px;
 }
 
-.float-right {
-    float: right;
-    margin-left: 25px;
+                .float-right {
+                            float: right;
+                            margin-left: 25px;
 }
 
 
@@ -136,60 +158,6 @@ p {
     display: block;
     margin: 10px auto;
     max-width: 150px;
-}
-
-.search-engine-optimization {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.online-reputation-management {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.social-media-marketing {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.search-engine-optimization img {
-    max-height: 200px;
-}
-
-.online-reputation-management img {
-    max-height: 200px;
-}
-
-.social-media-marketing img {
-    max-height: 200px;
-}
-
-.search-engine-optimization h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.online-reputation-management h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.social-media-marketing h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
 }
 
 .footer {
