--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,28 +5,34 @@
     margin: 0;
 }
 
-/*Glogal selectors*/
+/*Selectors targeting global properties*/
 body {
     background-color: #d9dcd6;
 }
 
-p {
-    font-size: 16px;
+    p {
+        font-size: 16px;
 }
 
-img {
-    max-height: 200px;
+    img {
+        max-height: 200px;
+        
 }
-h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
+    h1 {
+        display: inline-block;
+        font-size: 48px;
 }
-
-h1 {
-    display: inline-block;
-    font-size: 48px;
+    h2 {
+        margin-bottom: 20px;
+        font-size: 36px;
 }
-
+    h3 {
+        margin-bottom: 10px;
+        text-align: center;
+    }
+    h4 {
+        font-size: 20px;
+    }
 /*End glogal selectors*/
 
     header {
@@ -101,72 +107,35 @@ h1 {
 
 
 
-.benefits {
-    margin-right: 20px;
-    padding: 20px;
-    clear: both;
-    float: right;
-    width: 20%;
-    height: 100%;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #2589bd;
+    aside {
+            margin-right: 20px;
+            padding: 20px;
+            clear: both;
+            float: right;
+            width: 20%;
+            height: 100%;
+            font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+            background-color: #057bbb; 
+/*changed background color to get better contrast*/
 }
 
-.benefit-lead {
-    margin-bottom: 32px;
-    color: #ffffff;
+        article {
+                margin-bottom: 32px;
+                color: #ffffff;
+                
 }
 
-.benefit-brand {
-    margin-bottom: 32px;
-    color: #ffffff;
+                .aside-images {
+                                display: block;
+                                margin: 10px auto;
+                                max-width: 150px;
 }
 
-.benefit-cost {
-    margin-bottom: 32px;
-    color: #ffffff;
+
+    footer {
+            padding: 30px;
+            clear: both;
+            font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+            text-align: center;
 }
 
-.benefit-lead h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-brand h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-cost h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-lead img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-.benefit-brand img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-.benefit-cost img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-.footer {
-    padding: 30px;
-    clear: both;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    text-align: center;
-}
-
-.footer h2 {
-    font-size: 20px;
-}
