added alt text where needed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -71,6 +71,8 @@ body {
                         text-decoration: none;
 }
 
+/*Background image*/
+
     figure {
             height: 800px;
             width: 100%;
