--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,7 +33,7 @@ body {
     h4 {
         font-size: 20px;
     }
-/*End glogal selectors*/
+/*End global selectors*/
 
     header {
             padding: 20px;
@@ -92,7 +92,7 @@ body {
                 margin-bottom: 20px;
                 padding: 50px;
                 height: 300px;
-                font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+                font-family: 'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', sans-serif;
                 background-color: #0072bb;
                 color: #ffffff;
 }
@@ -111,12 +111,12 @@ body {
 
     aside {
             margin-right: 20px;
-            padding: 20px;
+            padding: 15px;
             clear: both;
             float: right;
             width: 20%;
-            height: 100%;
-            font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+            height: 941px;
+            font-family: 'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', sans-serif;
             background-color: #057bbb; 
 /*changed background color to get better contrast*/
 }
